STAR-723: update email endpoint
